--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
  <div class="father">
 <dv class="first-car">
-<img src="blue car.jpg" alt="sedans"/>
+<img src="coro.jpg" alt="sedans"/>
 <h1>SEDANS</h1>
 <p>choose a sedan for it is affordability, excellent and fuel economy. a comfort fot traveling across cities and country fot an enjoyable road trip.</p>
 <button>learn more</button>
 </dv>
 <dv>
     <div class="second-car">
-    <img src="suvs.jpg" alt="suvs">
+    <img src="bmw.jpg" alt="suvs">
     <h1>SUVS</h1>
     <p>suvs are for its spacious interior, power, and versatility. perefct for family trips and road vaccation. suvs have so much comfortability than sedans car. suvs contains more occupants.</p>
     <button>learn more</button>
